--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
@@ -19,6 +18,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "say": "^0.16.0",
+    "speak-tts": "^2.0.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
