--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.4.0",
     "better-react-carousel": "^1.1.1",
     "framer-motion": "^10.12.10",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
